src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Engagement_Conversion_Rate__c</fullName>
        <inlineHelpText>What pct. of possible conversions were converted to this engagement level or higher, by this campaign and any sub-campaigns.</inlineHelpText>
        <label>Engagement Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Engagement_Conversions__c</fullName>
        <label>Engagement Conversions</label>
        <summaryFilterItems>
            <field>CampaignMember.Engagement_Conversion__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Engagement_Conversions_in_Hierarchy__c</fullName>
        <inlineHelpText>Number of contacts that were moved up an engagement level due to this campaign or one of its sub-campaigns.</inlineHelpText>
        <label>Engagement Conversions in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Level_Numeric__c</fullName>
        <formula>VALUE(LEFT(TEXT( Leadership_Level__c ),1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Engagement Level Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Engagement_Response_Rate__c</fullName>
        <inlineHelpText>includes sub-campaigns in hierarchy that have same or higher engagement level</inlineHelpText>
        <label>Engagement Response Rate</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gratitude_Machine__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>True if this campaign for tracking contacts with the Gratitude Machine</inlineHelpText>
        <label>Gratitude Machine Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leadership_Level__c</fullName>
        <inlineHelpText>Level of leadership: 1-organizing, 2-consistent leader, 3-inconsistent leader, 4-activist, 5-donor/member</inlineHelpText>
        <label>Campaign Engagement Level</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Observing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Following</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Endorsing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Contributing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Owning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Leading</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Levels_Below_Top_of_Hierarchy__c</fullName>
        <formula>IF ( Parent.Parent.Parent.Parent.Id != null , 4 ,
IF (Parent.Parent.Parent.Id != null, 3,
IF (Parent.Parent.Id != null, 2,
IF (Parent.Id != null, 1 , 0)
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Levels Below Top of Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Engagement_Conversions__c</fullName>
        <label>New Engagement Conversions</label>
        <summaryFilterItems>
            <field>CampaignMember.Engagement_Conversion__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Engagement_Conversion_Type__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Newly_Engaged_Contacts__c</fullName>
        <inlineHelpText>List growth metric.  Count of how many contacts in this campaign got their very first engagement level because of this campaign.</inlineHelpText>
        <label>Newly Engaged Contacts</label>
        <summaryFilterItems>
            <field>CampaignMember.Engagement_Conversion__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Engagement_List_Growth__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Newly_Engaged_Contacts_in_Hierarchy__c</fullName>
        <inlineHelpText>Number of contacts in hierarchy who got an engagement level for the first time because of the campaign.</inlineHelpText>
        <label>Newly Engaged Contacts in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Removed__c</fullName>
        <inlineHelpText>The number of Campaign Members on a Gratitude Machine campaign that have been marked as Removed.</inlineHelpText>
        <label>Gratitude Machine Number Removed</label>
        <summaryFilterItems>
            <field>CampaignMember.Status</field>
            <operation>equals</operation>
            <value>Removed</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Opp_Engagement_Conversions__c</fullName>
        <label>Opp Engagement Conversions</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Conversion_Percentage__c</fullName>
        <formula>Engagement_Conversions__c /  NumberOfResponses</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Among responses, what percentage of them were engagement conversions (i.e. participation in this campaign meant the participant moved up in engagement level)</inlineHelpText>
        <label>Response Conversion Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Returning_Engagement_Conversions__c</fullName>
        <label>Returning Engagement Conversions</label>
        <summaryFilterItems>
            <field>CampaignMember.Engagement_Conversion__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>CampaignMember.Engagement_Conversion_Type__c</field>
            <operation>equals</operation>
            <value>Returning</value>
        </summaryFilterItems>
        <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Top_Hierarchy_Campaign_ID__c</fullName>
        <formula>IF ( Parent.Parent.Parent.Parent.Id != null , Parent.Parent.Parent.Parent.Id ,
  IF (Parent.Parent.Parent.Id != null, Parent.Parent.Parent.Id, 
    IF (Parent.Parent.Id  != null, Parent.Parent.Id ,
       IF (Parent.Id  != null, Parent.Id , Id )
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top of Hierarchy Campaign ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Unique_Contacts_In_Hierarchy__c</fullName>
        <label>Total Unique Contacts In Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unique_Leads_in_Hierarchy__c</fullName>
        <label>Total Unique Leads in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unique_Responses_in_Hierarchy__c</fullName>
        <label>Total Unique Responses in Hierarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Leadership_Level__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Campaigns_w_Engagement_Metrics</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>Leadership_Level__c</columns>
        <columns>Engagement_Response_Rate__c</columns>
        <columns>Total_Unique_Contacts_In_Hierarchy__c</columns>
        <columns>Total_Unique_Responses_in_Hierarchy__c</columns>
        <columns>Engagement_Conversion_Rate__c</columns>
        <columns>Engagement_Conversions__c</columns>
        <columns>Engagement_Conversions_in_Hierarchy__c</columns>
        <filterScope>Everything</filterScope>
        <label>Campaigns w/ Engagement Metrics</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>TEST</fullName>
        <active>true</active>
        <description>test campaign record type.  DO NOT include in package</description>
        <label>TEST</label>
    </recordTypes>
</CustomObject>